# paydacoin

./: .cirrus.yml  .gitignore  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libpaydacoinconsensus.pc.in  rename-file-contents-payda.sh  rename-filename-payda.sh  rename-port-number-payda.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  paydacoin.sln  paydacoin_config.h.in  vcpkg.json
ci/: lint_run_all.sh  test_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-android.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multisig-tutorial.md  p2p-bad-ports.md  paydacoin-conf.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-19762.md  release-notes-23395.md  release-notes-25574.md  release-notes-empty-template.md  release-process.md  (+6 more)
doc/man/: Makefile.am  paydacoin-cli.1  paydacoin-qt.1  paydacoin-tx.1  paydacoin-util.1  paydacoin-wallet.1  paydacoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  addrdb.cpp  (+165 more)
(+1473 files in other folders)
