dist_man1_MANS=

if BUILD_PAYDACOIND
  dist_man1_MANS+=paydacoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=paydacoin-qt.1
endif

if BUILD_PAYDACOIN_CLI
  dist_man1_MANS+=paydacoin-cli.1
endif

if BUILD_PAYDACOIN_TX
  dist_man1_MANS+=paydacoin-tx.1
endif

if BUILD_PAYDACOIN_UTIL
  dist_man1_MANS+=paydacoin-util.1
endif

if ENABLE_WALLET
if BUILD_PAYDACOIN_WALLET
  dist_man1_MANS+=paydacoin-wallet.1
endif
endif
